--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 									</p>
 								</a>
 							</div>
+							<button type="button" class="burger__btn burger__btn_active">
+								X
+							</button>
 							<ul class="menu menu__burger">
 								<li class="menu__item menu__item_burger" >
 									<a href="#" class="menu__link">
