--- a/company.html
+++ b/company.html
@@ -84,6 +84,58 @@
 						<button type="button" class="burger__btn">
 							<span></span>
 						</button>
+						<div class="burger__menu">
+							<div class="burger__menu_menu">
+							<div class="logo logo__burger">
+								<a href="#" class="logo__link d-flex">
+									<span>
+										JC
+									</span>
+									<p class="logo__text">
+										legal Advisory Services
+									</p>
+								</a>
+							</div>
+							<button type="button" class="burger__btn burger__btn_active">
+								X
+							</button>
+							<ul class="menu menu__burger">
+								<li class="menu__item menu__item_burger" >
+									<a href="#" class="menu__link">
+										Главная
+									</a>
+								</li>
+								<li class="menu__item menu__item_burger">
+									<a href="company.html" class="menu__link">
+										О компании
+									</a>
+								</li>
+								<li class="menu__item menu__item_burger">
+									<a href="#" class="menu__link">
+										Услуги
+									</a>
+								</li>
+								<li class="menu__item menu__item_burger">
+									<a href="#" class="menu__link">
+										Контакты
+									</a>
+								</li>
+								<li class="menu__item menu__item_burger">
+									<a href="#" class="menu__link">
+										Отзывы
+									</a>
+								</li>
+							</ul>
+							<div class="phone phone__burger">
+								<button type="button" href="#" class="phone__order">
+									Заказать звонок
+								</button>
+								<a href="tel:+ 74955672815" class="phone__link">
+									+ 7 (495) 567-28-15
+								</a>
+							</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
