--- a/company.html
+++ b/company.html
@@ -568,5 +568,8 @@
 			</div>
 		</div>
 	</footer>
+	<script src="js/jquery-3.4.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
