--- a/company.html
+++ b/company.html
@@ -101,7 +101,7 @@
 							</button>
 							<ul class="menu menu__burger">
 								<li class="menu__item menu__item_burger" >
-									<a href="#" class="menu__link">
+									<a href="index.html" class="menu__link">
 										Главная
 									</a>
 								</li>
@@ -476,12 +476,12 @@
 						</h5>
 						<ul class="footer-menu__list">
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
+								<a href="index.html" class="footer-menu__link">
 									Главная
 								</a>
 							</li>
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
+								<a href="company.html" class="footer-menu__link">
 									О компании
 								</a>
 							</li>
