--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="description" content="JC legal Advisory Service">
 	<meta name="keyworlds" content="Юридические услуги, помощь стартапам, помощь фрилансерам, помощь малому бизнесу">
 	<!-- Favicon -->
-	<link rel="icon" href="#" type="image/x-icon">
-	<link rel="shortcut icon" href="#" type="image/x-icon">
+	<link rel="icon" href="img/JC.png" type="image/x-icon">
+	<link rel="shortcut icon" href="img/JC.png" type="image/x-icon">
 	<!-- OG Tags -->
 	<meta property="og:title" content="JC legal Advisory Service">
 	<meta property="og:description" content="JC - это юридическая фирма с полным спектром услуг, специализирующаяся на стартапах, фрилансерах и малом бизнесе">
@@ -45,7 +45,7 @@
 				<div class="col-lg-6 d-none d-lg-flex">
 					<ul class="menu d-flex">
 						<li class="menu__item" >
-							<a href="#" class="menu__link">
+							<a href="index.html" class="menu__link">
 								Главная
 							</a>
 						</li>
@@ -103,7 +103,7 @@
 							</button>
 							<ul class="menu menu__burger">
 								<li class="menu__item menu__item_burger" >
-									<a href="#" class="menu__link">
+									<a href="index.html" class="menu__link">
 										Главная
 									</a>
 								</li>
@@ -484,12 +484,12 @@
 						</h5>
 						<ul class="footer-menu__list">
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
+								<a href="index.html" class="footer-menu__link">
 									Главная
 								</a>
 							</li>
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
+								<a href="company.html" class="footer-menu__link">
 									О компании
 								</a>
 							</li>
@@ -579,6 +579,7 @@
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/swiper.min.js"></script>
+	<script src="js/main.swiper.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
