--- a/company.html
+++ b/company.html
@@ -30,7 +30,7 @@
 			<div class="row align-item-center">
 				<div class="col-9 col-sm-11 col-md-4 col-lg-3">
 					<div class="logo">
-						<a href="#" class="logo__link d-flex">
+						<a href="index.html" class="logo__link d-flex">
 							<span>
 								JC
 							</span>
@@ -43,7 +43,7 @@
 				<div class="col-lg-6 d-none d-lg-flex">
 					<ul class="menu d-flex">
 						<li class="menu__item" >
-							<a href="#" class="menu__link">
+							<a href="index.html" class="menu__link">
 								Главная
 							</a>
 						</li>
@@ -53,17 +53,17 @@
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="services.html" class="menu__link">
 								Услуги
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="contact.html" class="menu__link">
 								Контакты
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="client.html" class="menu__link">
 								Отзывы
 							</a>
 						</li>
@@ -87,7 +87,7 @@
 						<div class="burger__menu">
 							<div class="burger__menu_menu">
 							<div class="logo logo__burger">
-								<a href="#" class="logo__link d-flex">
+								<a href="index.html" class="logo__link d-flex">
 									<span>
 										JC
 									</span>
@@ -111,17 +111,17 @@
 									</a>
 								</li>
 								<li class="menu__item menu__item_burger">
-									<a href="#" class="menu__link">
+									<a href="services.html" class="menu__link">
 										Услуги
 									</a>
 								</li>
 								<li class="menu__item menu__item_burger">
-									<a href="#" class="menu__link">
+									<a href="contact.html" class="menu__link">
 										Контакты
 									</a>
 								</li>
 								<li class="menu__item menu__item_burger">
-									<a href="#" class="menu__link">
+									<a href="client.html" class="menu__link">
 										Отзывы
 									</a>
 								</li>
@@ -154,7 +154,7 @@
 						<a href="index.html" class="navigation-main">
 							Главная
 						</a>
-						<a href="#" class="navigation-company">
+						<a href="company.html" class="navigation-company">
 							О компании
 						</a>
 					</div>
@@ -486,13 +486,13 @@
 								</a>
 							</li>
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
+								<a href="client.html" class="footer-menu__link">
 									Отзывы
 								</a>
 							</li>
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
-									Новости
+								<a href="contact.html" class="footer-menu__link">
+									Контакты
 								</a>
 							</li>
 						</ul>
