--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="row align-item-center">
 				<div class="col-9 col-sm-11 col-md-4 col-lg-3">
 					<div class="logo">
-						<a href="#" class="logo__link d-flex">
+						<a href="index.html" class="logo__link d-flex">
 							<span>
 								JC
 							</span>
@@ -55,17 +55,17 @@
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="services.html" class="menu__link">
 								Услуги
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="contact.html" class="menu__link">
 								Контакты
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="client.html" class="menu__link">
 								Отзывы
 							</a>
 						</li>
@@ -89,7 +89,7 @@
 						<div class="burger__menu">
 							<div class="burger__menu_menu">
 							<div class="logo logo__burger">
-								<a href="#" class="logo__link d-flex">
+								<a href="index.html" class="logo__link d-flex">
 									<span>
 										JC
 									</span>
@@ -113,17 +113,17 @@
 									</a>
 								</li>
 								<li class="menu__item menu__item_burger">
-									<a href="#" class="menu__link">
+									<a href="services.html" class="menu__link">
 										Услуги
 									</a>
 								</li>
 								<li class="menu__item menu__item_burger">
-									<a href="#" class="menu__link">
+									<a href="contact.html" class="menu__link">
 										Контакты
 									</a>
 								</li>
 								<li class="menu__item menu__item_burger">
-									<a href="#" class="menu__link">
+									<a href="client.html" class="menu__link">
 										Отзывы
 									</a>
 								</li>
@@ -348,8 +348,8 @@
 								<img src="img/Vector 2.svg" alt="" class="button__pic">	
 							</button>
 						</div>
-						<div class="slider d-flex justify-content-between">
-							<div class="swiper-container">
+						<div class="slider swiper-container d-flex justify-content-between">
+							<!-- <div class="swiper-container"> -->
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
 										<div class="slider__item">
@@ -421,7 +421,7 @@
 										</div>
 									</div>
 								</div>
-							</div>	
+							<!-- </div>	 -->
 						</div>
 					</div>
 				</div>
@@ -494,13 +494,13 @@
 								</a>
 							</li>
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
+								<a href="client.html" class="footer-menu__link">
 									Отзывы
 								</a>
 							</li>
 							<li class="footer-menu__item">
-								<a href="#" class="footer-menu__link">
-									Новости
+								<a href="contact.html" class="footer-menu__link">
+									Контакты
 								</a>
 							</li>
 						</ul>
